--- a/HappyBirthday/Birthday1/index.html
+++ b/HappyBirthday/Birthday1/index.html
@@ -1,1 +1,168 @@
+<!DOCTYPE html>
+<html lang="en">
 
+<head>
+    <title>Happy Birthday</title>
+    <meta name="description" content="Happy birthday friend">
+    <link rel="author" href="https://github.com/MrKhuong">
+    <meta name="keywords" content="birthday, happy">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="Style/style.css">
+    <link rel="stylesheet" href="Style/loading.css">
+    <!--  <link href='http://fonts.googleapis.com/css?family=Signika' rel='stylesheet' type='text/css'> -->
+    <link rel="stylesheet/less" href="Style/cake.less">
+    <script src="//cdnjs.cloudflare.com/ajax/libs/less.js/2.1.0/less.min.js"></script>
+</head>
+
+<body>
+    <div class="loading"></div>
+    <audio class="song" controls loop>
+        <source src="Mp3_hbd.mp3" type="">
+        Your browser isn't invited for super fun video time.
+    </audio>
+
+    <div class="balloons text-center" id="id1">
+        <h2 style="color:#f2b300">F</h2>
+    </div>
+    <div class="balloons text-center" id="id2">
+        <h2 style="color:#0719D4;">R</h2>
+    </div>
+    <div class="balloons text-center" id="id3">
+        <h2 style="color:#D14D39;">I</h2>
+    </div>
+    <div class="balloons text-center" id="id4">
+        <h2 style="color:#8FAD00;">E</h2>
+    </div>
+    <div class="balloons text-center" id="id5">
+        <h2 style="color:#8377E4;">N</h2>
+    </div>
+    <div class="balloons text-center" id="id6">
+        <h2 style="color:#99C96A;">D</h2>
+    </div>
+    <div class="balloons text-center" id="id7">
+        <h2 style="color:#20CFB4;">:3</h2>
+    </div>
+
+    <img src="https://i.postimg.cc/zGgQSF0d/Balloon-Border.png" width="100%" class="balloon-border" alt="" srcset="">
+
+    <div class="container">
+        <div class="row">
+            <div class="col-md-2 col-xs-2 bulb-holder">
+                <div class="bulb" id="bulb_yellow"></div>
+            </div>
+            <div class="col-md-2 col-xs-2 bulb-holder">
+                <div class="bulb" id="bulb_red"></div>
+            </div>
+            <div class="col-md-2 col-xs-2 bulb-holder">
+                <div class="bulb" id="bulb_blue"></div>
+            </div>
+            <div class="col-md-2 col-xs-2 bulb-holder">
+                <div class="bulb" id="bulb_green"></div>
+            </div>
+            <div class="col-md-2 col-xs-2 bulb-holder">
+                <div class="bulb" id="bulb_pink"></div>
+            </div>
+            <div class="col-md-2 col-xs-2 bulb-holder">
+                <div class="bulb" id="bulb_orange"></div>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-md-12 text-center"><img src="https://i.postimg.cc/Z5LyB164/banner.png" class="bannar" alt=""></div>
+        </div>
+
+        <div class="row cake-cover">
+            <div class="col-md-12 texr-center">
+                <div class="cake">
+                    <div class="velas">
+                        <div class="fuego"></div>
+                        <div class="fuego"></div>
+                        <div class="fuego"></div>
+                        <div class="fuego"></div>
+                        <div class="fuego"></div>
+                    </div>
+
+                    <div class="cobertura"></div>
+                    <div class="bizcocho"></div>
+                </div>
+            </div>
+        </div>
+
+        <div class="row message">
+            <div class="col-md-12">
+                <p>Today is...</p>
+                <p>as beautiful as other days</p>
+                <p>but you realize</p>
+                <p>another year has gone</p>
+                <p>in a blink of the eyes</p>
+                <p><strong>however</strong></p>
+                <p>Do you know..?</p>
+                <p>today is just special</p>
+                <p>so special to you</p>
+                <p>that's why</p>
+                <p>Let's make it...</p>
+                <p>the best celebration ever</p>
+                <p>and let me share...</p>
+                <p>a piece of happiness to you</p>
+                <p>I made all this...</p>
+                <p>as a birthday present to you</p>
+                <p>thanks for being there</p>
+                <p>thanks for the love we made</p>
+                <p>thanks for everything</p>
+                <p>I wish you all the best</p>
+                <p>May your life be at ease</p>
+                <p>May all your wishes come true</p>
+                <p>Remember</p>
+                <p>your ambitions</p>
+                <p>you live as a free bird...</p>
+                <p>flying in the blue sky</p>
+                <p>Now things are different...</p>
+                <p>real story of your life</p>
+                <p>is just about to begin</p>
+                <p>indeed..</p>
+                <p>but...</p>
+                <p>don't worry</p>
+                <p>because...</p>
+                <p>God has your back</p>
+                <p>and</p>
+                <p>this year will be better</p>
+                <p>and I hope</p>
+                <p>you'll find...</p>
+                <p>happiness along the way</p>
+                <p>keep your spirit up</p>
+                <p>enjoy every single moment...</p>
+                <p>that you experience today</p>
+                <p>fill it with your most beautiful smile</p>
+                <p>and make it the best memory..</p>
+                <p>lastly...</p>
+                <p>I'd like to wish you one more time</p>
+                <p>a very happy birthday My baby</p>
+            </div>
+        </div>
+
+        <div class="navbar navbar-fixed-bottom">
+            <div class="row">
+                <div class="col-md-6 text-center col-md-offset-3">
+                    <button class="btn btn-primary" id="turn_on">Turn On Lights</button>
+                    <button class="btn btn-primary" id="play">Play Music</button>
+                    <button class="btn btn-primary" id="bannar_coming">Let's Decorate</button>
+                    <button class="btn btn-primary" id="balloons_flying">Fly With Balloons</button>
+                    <button class="btn btn-primary" id="cake_fadein">Most Delicious Cake Ever</button>
+                    <button class="btn btn-primary" id="light_candle"> Light Candle</button>
+                    <button class="btn btn-primary" id="wish_message">Happy Birthday</button>
+                    <button class="btn btn-primary" id="story">A mesage for you</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
+    <script src="script.js"></script>
+</body>
+
+</html>
