--- a/ConfessYourLove/Heart/index.html
+++ b/ConfessYourLove/Heart/index.html
@@ -1,1 +1,18 @@
+<!DOCTYPE html>
+<html lang="en">
 
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Heart</title>
+    <link rel="shortcut icon" href="heart_icon.jpg" type="image/x-icon">
+    <link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+    <canvas id="pinkboard"></canvas>
+    <script src="script.js"></script>
+</body>
+
+</html>
