--- a/ConfessYourLove/DaysInLove/index.html
+++ b/ConfessYourLove/DaysInLove/index.html
@@ -1,1 +1,47 @@
+<!DOCTYPE html>
+<html lang="en">
 
+<head>
+      <meta charset="UTF-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <meta http-equiv="X-UA-Compatible" content="ie=edge">
+      <link rel="stylesheet" href="style.css">
+      <link rel="shortcut icon" type="image/png" href="img/favicon.png" />
+      <title>Days In Love</title>
+</head>
+
+<body>
+      <div id="wrapper">
+            <h1>LOVE DAYS</h1>
+
+            <div id="clock-box">
+                  <div id="clock">
+                        <date>0 DAYS</date>
+                        <time>00:00:00</time>
+                  </div>
+            </div>
+
+            <div id="info">
+                  <div class="one">
+                        <img src="img/main.jpg" class="avt">
+                        <p>You</p>
+                  </div>
+                  <div id="heart">
+                        ❤<anni>...</anni>
+                  </div>
+                  <div class="two">
+                        <img src="img/main.jpg" class="avt">
+                        <p>Your Lover</p>
+                  </div>
+            </div>
+
+            <div id="music">
+                  <audio loop autoplay controls>Your browser does not support the audio element.</audio>
+            </div>
+            <footer>Thank you for your love 💕</footer>
+      </div>
+
+      <script src="app.js"></script>
+</body>
+
+</html>
