--- a/ConfessYourLove/CinemaWebsite/index.html
+++ b/ConfessYourLove/CinemaWebsite/index.html
@@ -1,1 +1,58 @@
+<!DOCTYPE html>
+<html lang="en">
 
+<head>
+      <meta charset="UTF-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <meta http-equiv="X-UA-Compatible" content="ie=edge">
+      <link rel="shortcut icon" type="image/png" href="img/heart.png" />
+      <title>HEY BAE !!</title>
+      <link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+
+      <div class="container">
+
+            <header>
+                  <img src="img/heart.png">
+                  <p>Cuối tuần này... mình đi chơi nhé !!</p>
+            </header>
+
+            <main>
+                  <h2>Anh đang có 2 vé xem phim</h2>
+                  <audio autoplay controls loop>
+                        <source src="mp3/Nho-lop-truong.mp3" type="audio/mpeg">
+                        Your browser does not support the audio element.
+                  </audio>
+
+                  <div>
+                        <p>Vé thứ nhất có tên em</p>
+                        <div class="ticket">
+                              <img src="img/ticket.png">
+                              <span>Your name</span>
+                        </div>
+                  </div>
+
+                  <div>
+                        <p>Vé thứ hai có tên anh</p>
+                        <div class="ticket">
+                              <img src="img/ticket.png">
+                              <span>Your girl friend's name</span>
+                        </div>
+                  </div>
+
+                  <p id="invite">Mình đi xem phim, rồi đi ăn những món em thích... chịu không ^^</p>
+                  <div id="agree">
+                        <p>Phim chiếu vào <time> 19h30 - 20/08/2023 </time> </p>
+                        <p>Anh sẽ đón em lúc <time>19h00</time></p>
+                        <i id="end">💕 Love you</i>
+                  </div>
+            </main>
+
+            <a href="#" id="contact" target="">Nhắn tin cho anh</a>
+      </div>
+
+</body>
+
+</html>
